# clicklog

./: .env.example  .gitignore  README.md  docker-compose.yml
clickhouse/: .env.example  .gitignore  README.md  docker-compose.yml
clickhouse/clickhouse/config.d/: low-resources.xml  network-and-logging.xml
clickhouse/clickhouse/init/: 01-init-tenants.sh
frontend/: .env.example  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/public/: llms.txt
frontend/src/: App.tsx  index.css  router.tsx
frontend/src/api/: auth.ts  client.ts  events.ts  keys.ts  stats.ts  tenants.ts
frontend/src/auth/: AuthContext.tsx  ProtectedRoute.tsx
frontend/src/components/layout/: AppShell.tsx  PageHeader.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  (+6 more)
frontend/src/lib/: cn.ts  csv.ts  time.ts
frontend/src/pages/: DashboardPage.tsx  DocsPage.tsx  KeysPage.tsx  LoginPage.tsx  LogsPage.tsx  NotFoundPage.tsx
frontend/src/query/: auth.ts  events.ts  keyFactory.ts  keys.ts  queryClient.ts  stats.ts  tenants.ts
frontend/src/types/: index.ts
ingest-api/: Cargo.toml  Dockerfile  README.md
ingest-api/src/: admin.rs  auth.rs  ch.rs  drain.rs  handlers.rs  keys.rs  main.rs  read.rs  schema.rs
md/: event-standard-v2.md
monitoring/: .env.example  README.md  docker-compose.yml
monitoring/grafana/dashboards/: bodhistreams.json  keeperproxy.json
monitoring/prometheus/: prometheus.yml
valkey/: .env.example  .gitignore  README.md  docker-compose.yml
valkey/valkey/: entrypoint.sh  valkey.conf
(+1 files in other folders)
